--- a/SoundCloud/SoundCloud/Extra.storyboard
+++ b/SoundCloud/SoundCloud/Extra.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WCL-to-d8c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Poo-hd-DZo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -52,13 +52,21 @@
                                     <constraint firstItem="LWi-5W-Wt6" firstAttribute="top" secondItem="dGV-En-o6m" secondAttribute="top" id="zxa-sA-Q8l"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l3W-fp-gaz" customClass="CurrentSongPlaying" customModule="SoundCloud" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="543" width="375" height="62"/>
+                                <color key="backgroundColor" red="1" green="0.72941176470000002" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="TCb-4w-xX6" firstAttribute="trailing" secondItem="l3W-fp-gaz" secondAttribute="trailing" id="7dJ-C8-GQm"/>
+                            <constraint firstItem="l3W-fp-gaz" firstAttribute="height" secondItem="dGV-En-o6m" secondAttribute="height" id="AVh-8u-NXo"/>
                             <constraint firstItem="dGV-En-o6m" firstAttribute="leading" secondItem="uJj-gq-O7c" secondAttribute="leading" id="Gm9-mN-AHJ"/>
                             <constraint firstAttribute="trailing" secondItem="dGV-En-o6m" secondAttribute="trailing" id="JqG-kg-4GM"/>
+                            <constraint firstItem="l3W-fp-gaz" firstAttribute="leading" secondItem="TCb-4w-xX6" secondAttribute="leading" id="ckF-Eh-djo"/>
                             <constraint firstItem="dGV-En-o6m" firstAttribute="bottom" secondItem="TCb-4w-xX6" secondAttribute="bottom" id="crM-VU-3V7"/>
                             <constraint firstItem="dGV-En-o6m" firstAttribute="height" secondItem="uJj-gq-O7c" secondAttribute="height" multiplier="60/647" id="wZX-h7-gwf"/>
+                            <constraint firstItem="dGV-En-o6m" firstAttribute="top" secondItem="l3W-fp-gaz" secondAttribute="bottom" id="y7i-sj-2jR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="TCb-4w-xX6"/>
                     </view>
@@ -66,6 +74,7 @@
                         <outlet property="tabbarItemHome" destination="LWi-5W-Wt6" id="bdX-wn-D5k"/>
                         <outlet property="tabbarItemLibrary" destination="LXk-zM-NTV" id="ksi-p1-fqT"/>
                         <outlet property="tabbarItemSearch" destination="iPM-jp-UZJ" id="RYI-hW-PUn"/>
+                        <outlet property="viewCurrentSongPlaying" destination="l3W-fp-gaz" id="pGS-fq-tea"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZVM-Jf-XxS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -84,17 +93,17 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="72"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ImP-VW-fRn">
-                                        <rect key="frame" x="72" y="16.5" width="231" height="39"/>
+                                        <rect key="frame" x="72" y="14.5" width="231" height="43"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="scZ-ld-tzV">
-                                                <rect key="frame" x="0.0" y="0.0" width="231" height="21.5"/>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="231" height="23.5"/>
+                                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="18"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcU-6l-0mf">
-                                                <rect key="frame" x="0.0" y="21.5" width="231" height="17.5"/>
-                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                                <rect key="frame" x="0.0" y="23.5" width="231" height="19.5"/>
+                                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
                                                 <color key="textColor" red="0.54117647059999996" green="0.4039215686" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -128,21 +137,25 @@
                                     <constraint firstItem="n48-EM-Ns6" firstAttribute="leading" secondItem="xjy-N9-iPu" secondAttribute="leading" id="tze-Yc-b8m"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAB-kn-Ct0">
+                                <rect key="frame" x="0.0" y="92" width="375" height="400"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="xdj-G9-W52">
                                 <rect key="frame" x="0.0" y="92" width="375" height="400"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yL5-WG-rG4">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="372" height="398"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="F3C-tp-xcu">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SongPlayingCollectionViewCell" id="F3C-tp-xcu">
+                                        <rect key="frame" x="1.5" y="0.0" width="372" height="398"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="372" height="398"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
                                     </collectionViewCell>
@@ -192,17 +205,17 @@
                                 <rect key="frame" x="0.0" y="554" width="375" height="113"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdS-an-AeK">
-                                        <rect key="frame" x="10" y="5" width="43" height="20"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <rect key="frame" x="10" y="5" width="47.5" height="22.5"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="lj4-pQ-giK">
-                                        <rect key="frame" x="66" y="0.5" width="243" height="31"/>
+                                        <rect key="frame" x="70.5" y="2" width="234.5" height="31"/>
                                     </slider>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="04:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Wi-Tf-D4l">
-                                        <rect key="frame" x="322" y="5" width="43" height="20"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <rect key="frame" x="318" y="5" width="47" height="22.5"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -266,8 +279,11 @@
                             <constraint firstItem="xjy-N9-iPu" firstAttribute="height" secondItem="Xgt-TT-v2i" secondAttribute="height" multiplier="70/647" id="2Tp-eJ-DjU"/>
                             <constraint firstItem="mcl-9q-gjy" firstAttribute="top" secondItem="xdj-G9-W52" secondAttribute="bottom" id="2h1-mi-E7y"/>
                             <constraint firstItem="Tk4-Kq-Qvu" firstAttribute="top" secondItem="mcl-9q-gjy" secondAttribute="bottom" id="3yd-nP-NaG"/>
+                            <constraint firstItem="cAB-kn-Ct0" firstAttribute="height" secondItem="Xgt-TT-v2i" secondAttribute="height" multiplier="6/10" id="58F-Fx-MPQ"/>
                             <constraint firstItem="NGf-kJ-JGB" firstAttribute="trailing" secondItem="xdj-G9-W52" secondAttribute="trailing" id="Dto-YX-zTb"/>
+                            <constraint firstItem="cAB-kn-Ct0" firstAttribute="trailing" secondItem="NGf-kJ-JGB" secondAttribute="trailing" id="Ihs-jM-eqk"/>
                             <constraint firstItem="mcl-9q-gjy" firstAttribute="leading" secondItem="NGf-kJ-JGB" secondAttribute="leading" id="KWw-SK-Sw8"/>
+                            <constraint firstItem="cAB-kn-Ct0" firstAttribute="leading" secondItem="NGf-kJ-JGB" secondAttribute="leading" id="MNf-ra-P1g"/>
                             <constraint firstItem="NGf-kJ-JGB" firstAttribute="trailing" secondItem="xjy-N9-iPu" secondAttribute="trailing" id="Vtq-KN-hac"/>
                             <constraint firstItem="xjy-N9-iPu" firstAttribute="top" secondItem="NGf-kJ-JGB" secondAttribute="top" id="Wz2-gx-02r"/>
                             <constraint firstItem="NGf-kJ-JGB" firstAttribute="bottom" secondItem="Tk4-Kq-Qvu" secondAttribute="bottom" id="d34-ym-AF2"/>
@@ -277,10 +293,12 @@
                             <constraint firstItem="NGf-kJ-JGB" firstAttribute="trailing" secondItem="mcl-9q-gjy" secondAttribute="trailing" id="keE-qa-pzF"/>
                             <constraint firstItem="xdj-G9-W52" firstAttribute="leading" secondItem="NGf-kJ-JGB" secondAttribute="leading" id="scq-M2-l7m"/>
                             <constraint firstItem="xdj-G9-W52" firstAttribute="height" secondItem="Xgt-TT-v2i" secondAttribute="height" multiplier="6/10" id="tdY-Dk-pLE"/>
+                            <constraint firstItem="cAB-kn-Ct0" firstAttribute="top" secondItem="xjy-N9-iPu" secondAttribute="bottom" id="wvg-ul-lWM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NGf-kJ-JGB"/>
                     </view>
                     <connections>
+                        <outlet property="collectionViewDisplay" destination="xdj-G9-W52" id="6JX-3a-Yvx"/>
                         <outlet property="ibAddToPlaylist" destination="9HP-fw-kS4" id="otT-cA-Jl0"/>
                         <outlet property="ibCurrentPlaylist" destination="YI1-oA-msL" id="imn-pu-FbI"/>
                         <outlet property="ibDownload" destination="mRC-WO-5KC" id="qQi-Xb-ztL"/>
@@ -297,6 +315,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NU5-f5-0L6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1029.5999999999999" y="151.57421289355324"/>
+        </scene>
+        <!--Current Playlist View Controller-->
+        <scene sceneID="C2i-hE-odc">
+            <objects>
+                <viewController storyboardIdentifier="CurrentPlaylistViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HKm-6t-0W4" customClass="CurrentPlaylistViewController" customModule="SoundCloud" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fV1-Qg-eI5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DvG-8h-cMf">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.54117647059999996" green="0.4039215686" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="HKm-6t-0W4" id="2hq-je-YB7"/>
+                                    <outlet property="delegate" destination="HKm-6t-0W4" id="rZs-TH-ZZS"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rXp-Ur-Xv8" firstAttribute="trailing" secondItem="DvG-8h-cMf" secondAttribute="trailing" id="0cF-gT-kYM"/>
+                            <constraint firstItem="DvG-8h-cMf" firstAttribute="leading" secondItem="rXp-Ur-Xv8" secondAttribute="leading" id="AeT-Xa-cWJ"/>
+                            <constraint firstItem="rXp-Ur-Xv8" firstAttribute="bottom" secondItem="DvG-8h-cMf" secondAttribute="bottom" id="qfD-PX-Caz"/>
+                            <constraint firstItem="DvG-8h-cMf" firstAttribute="top" secondItem="rXp-Ur-Xv8" secondAttribute="top" id="wHl-sN-qy6"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rXp-Ur-Xv8"/>
+                    </view>
+                    <connections>
+                        <outlet property="tblListCurrentSong" destination="DvG-8h-cMf" id="LtO-we-uyi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BDY-eS-7hE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1834" y="152"/>
         </scene>
     </scenes>
 </document>
