--- a/SoundCloud/SoundCloud/Home/View/HomeTableViewCell.xib
+++ b/SoundCloud/SoundCloud/Home/View/HomeTableViewCell.xib
@@ -13,31 +13,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeTableViewCell" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="SoundCloud" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeTableViewCell" rowHeight="227" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="SoundCloud" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="372" height="227"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="372" height="226.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pqN-Ym-Kz8">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                        <rect key="frame" x="0.0" y="0.0" width="372" height="45.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All Music" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IbQ-ya-Igi">
-                                <rect key="frame" x="15" y="9.5" width="71.5" height="22.5"/>
+                                <rect key="frame" x="15" y="12" width="71.5" height="22.5"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tld-hv-40L">
-                                <rect key="frame" x="289" y="2.5" width="71" height="35"/>
+                                <rect key="frame" x="286" y="5" width="71" height="35"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                 <state key="normal" title="See All &gt;">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.72941176470000002" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.69019607839999997" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="IbQ-ya-Igi" firstAttribute="centerY" secondItem="pqN-Ym-Kz8" secondAttribute="centerY" id="CU4-2e-oYy"/>
                             <constraint firstAttribute="trailing" secondItem="Tld-hv-40L" secondAttribute="trailing" constant="15" id="Wce-XQ-fXU"/>
@@ -46,8 +46,11 @@
                         </constraints>
                     </view>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="vfX-v6-QEn">
-                        <rect key="frame" x="0.0" y="50" width="375" height="139"/>
+                        <rect key="frame" x="0.0" y="55.5" width="372" height="150"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="150" id="W4G-Pz-IEP"/>
+                        </constraints>
                         <inset key="scrollIndicatorInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="w0p-Hb-eYM">
                             <size key="itemSize" width="50" height="50"/>
@@ -60,7 +63,7 @@
                 <constraints>
                     <constraint firstItem="pqN-Ym-Kz8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="D8Q-Ab-JnY"/>
                     <constraint firstItem="vfX-v6-QEn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="MuB-Dg-QBE"/>
-                    <constraint firstAttribute="bottom" secondItem="vfX-v6-QEn" secondAttribute="bottom" constant="10" id="SHB-D3-7ei"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="vfX-v6-QEn" secondAttribute="bottom" constant="10" id="SHB-D3-7ei"/>
                     <constraint firstItem="pqN-Ym-Kz8" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="1/5" id="dyb-fS-S0j"/>
                     <constraint firstItem="pqN-Ym-Kz8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="joo-39-jwH"/>
                     <constraint firstItem="vfX-v6-QEn" firstAttribute="top" secondItem="pqN-Ym-Kz8" secondAttribute="bottom" constant="10" id="kUR-N6-UJB"/>
@@ -74,6 +77,7 @@
                 <outlet property="seeAllButton" destination="Tld-hv-40L" id="5ng-eK-LDm"/>
                 <outlet property="titleLabel" destination="IbQ-ya-Igi" id="tFP-WE-KCO"/>
             </connections>
+            <point key="canvasLocation" x="23" y="65.5"/>
         </tableViewCell>
     </objects>
 </document>
